--- a/src/index.css
+++ b/src/index.css
@@ -11,30 +11,41 @@ body {
   background-color: rgb(167, 175, 153);
   min-width: 320px;
   min-height: 100vh;
+  text-align: center;
 }
 
-header {
+header h1 {
   background-color: #333;
   color: white;
   width: 100%;
   padding: 0.5rem 0.5rem;
+  text-align: left;
 }
 
 main {
   min-height: calc(100vh - 180px);
   padding: 2rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 3rem;
 }
 
 .cards {
-  background-color: white;
-  height: 100px;
-  padding: 3rem;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
+  gap: 2rem;
+  margin-top: 2rem;
+}
+
+.card {
+  background-color: white;
+  padding: 2rem;
+  line-height: 30px;
+  box-shadow: #333333a0 3px 3px;
+}
+
+.card button {
+  border-style: none;
+  padding: 0.5rem;
+}
+
+.card button:hover {
+  background-color: darkgray;
 }
